--- a/src/index.html
+++ b/src/index.html
@@ -15,13 +15,14 @@
         name="searchQuery"
         autocomplete="off"
         placeholder="Search images..."
+        class="input"
       />
-      <button type="submit">Search</button>
+      <button type="submit" class="btn">Search</button>
     </form>
     <div class="gallery">
       <!-- Картки зображень -->
     </div>
-    <button type="button" class="load-more">Load more</button>
+    <button type="button" class="load-more btn disabled" style="display: none">Load more</button>
 
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <!-- <include src="./partials/example.html"></include> -->
